[metadata]
name = botsniffer
version = attr: botsniffer.__version__
author = Oli Morris
author_email = olimorris@users.noreply.github.com
description = Create a dependency tree for Automation 360 bots
url = https://github.com/olimorris/botsniffer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
python_requires = >=3.8
package_dir=
    =src
install_requires =
    rich >= 13.7.0
    treelib == 1.6.4
    typer >= 0.9.0

[options.extras_require]
dev =
    pytest >= 7.4.3

[options.package_data]
* = config/*, extras/*

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    botsniffer = botsniffer.application:app
